--- a/teamspeak3-server.service
+++ b/teamspeak3-server.service
@@ -7,8 +7,8 @@ Type=simple
 User=teamspeak
 Group=teamspeak
 WorkingDirectory=/var/lib/teamspeak3-server
-EnvironmentFile=/etc/default/teamspeak3-server
-ExecStart=/usr/bin/ts3server $TS_ARGS
+Environment='LD_LIBRARY_PATH="/usr/lib/mariadb/:$LD_LIBRARY_PATH"'
+ExecStart=/usr/bin/ts3server inifile=/etc/teamspeak3-server.ini
 
 [Install]
 WantedBy=multi-user.target
